--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">My First App</string>
+    <string name="app_name">My First App. This is being synced by AS and pulled by Jenkins.</string>
     <string name="hello_world">Hello Ravello!</string>
     <string name="action_settings">Settings</string>
 
